build(deps): fix problem running db container

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./mysql-data:/var/lib/mysql/
     ports:
       - "9906:3306"
+    user: mysql
 
   phpmyadmin:
     depends_on:
